# lexical-analyzer

./: .gitignore  AUTHENTICATE_GITHUB.md  GITHUB_AUTH.md  LICENSE  Makefile  README.md  RENAME_REPOSITORY.md  complete_setup.ps1  main.py  push_to_github.ps1  pyproject.toml  requirements.txt  run_tests.ps1  setup.py  setup_github_auth.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml
src/application/: __init__.py  command_handler.py  lexer.py
src/domain/: __init__.py  automaton.py  regex_parser.py  tag.py
src/infrastructure/: __init__.py  cli.py
test/: __init__.py  test_command_handler.py  test_lexer.py  test_regex_parser.py  test_smoke.py  test_tag.py
